--- a/index.html
+++ b/index.html
@@ -1,32 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="css/style.css">
-<script src="myproject.js"></script>
 
 <head>
-    <title>
-        Eunice Koo
-    </title>
+    <meta charset="UTF-8">
+    <title>eunice koo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-    <body>
-
-        <nav>
-            <ul>
-                <a href="./index.html">Home</a>
-                <a href="./about.html">About</a>
-                <a href="./resume.html">Resume</a>
-                <a href="./projects.html">Projects</a>
+<body>
+    <section id="home">
+        <header>
+            <ul id="nav">
+                <li><a href="#home">home</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#projects">projects</a></li>
             </ul>
-        </nav>
+        </header>
+        <h1>
+            hi, nice to meet you!
+        </h1>
 
-        <p style="text-align:center;">
-            <img src="headshot.jpg" alt = "Headshot" width="300" height="300">
-        </p>
+        <h3>
+            my name is Eunice Koo, and I'm a 2nd year student at Northeastern University studying 
+            computer science and biology. I am currently looking for co-ops/internships for Summer/Fall 2023!
+        </h3>
 
-        <h1>Eunice Koo</h1>
-        <p>Welcome to my website!</p>
+    </section>
 
-    </body>
+    <section id="about">
+        <h1>
+            about
+        </h1>
+
+        <h3>
+        My interests lie in genetics research, 
+        medical software, and biotechnology, and I hope to pursue a career in building 
+        software to aid in the innovation of medicine, healthcare, and biological research. I have primarily worked in Java throughout my courses at Northeastern, but also have 
+        experience working with SQL, Python, and HTML/CSS/Javascript either in addtional courses
+        or individual endeavors. Outside of academics, I love playing music, solving puzzles, going on late night 
+        runs, and spending time with family and friends. 
+        </h3>
+    </section>
+
+    <section id="projects">
+        <h1>
+            projects
+        </h1>
+    </section>
+</body>
 
 </html>
