--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>eunice koo</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,9 +16,13 @@
                 <li><a href="#projects">projects</a></li>
             </ul>
         </header>
+
+        <img src="images/headshot.jpg" alt="Headshot Image">
+
         <h1>
             hi, nice to meet you!
         </h1>
+
 
         <h3>
             my name is Eunice Koo, and I'm a 2nd year student at Northeastern University studying 
@@ -33,12 +37,13 @@
         </h1>
 
         <h3>
-        My interests lie in genetics research, 
-        medical software, and biotechnology, and I hope to pursue a career in building 
-        software to aid in the innovation of medicine, healthcare, and biological research. I have primarily worked in Java throughout my courses at Northeastern, but also have 
-        experience working with SQL, Python, and HTML/CSS/Javascript either in addtional courses
-        or individual endeavors. Outside of academics, I love playing music, solving puzzles, going on late night 
-        runs, and spending time with family and friends. 
+            My interests lie in genetics research, 
+            medical software, and biotechnology, and I hope to pursue a career in building 
+            software to facilitate the innovation of medicine, healthcare, and biological research.
+            I have primarily worked in Java throughout my courses at Northeastern, but also have 
+            experience working with SQL, Python, and HTML/CSS/Javascript either in addtional courses
+            or individual endeavors. In my free time, I love playing music, solving puzzles, 
+            going on runs, and spending time with family and friends. 
         </h3>
     </section>
 
@@ -46,6 +51,22 @@
         <h1>
             projects
         </h1>
+
+        <img class="marble" src="images/marble.png" alt="Marble Solitaire Image">
+
+        <h3 class="marble">
+            Marble Solitaire
+        </h3>
+
+        <p class="marble">
+            This marble solitaire game was made in Java for Northeastern's CS 3500 course.
+            It features three possible game modes you can choose from, and when a player
+            starts the game they are presented with an initial board in which they can enter
+            to and from coordinates to make moves and play the game. The game is over
+            when there are no more possible moves left, and the objective of the game is to
+            clear as many marbles as possible.
+        </p>
+
     </section>
 </body>
 
