--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
     </section>
 
     <section id="about">
+
+        <header>
+            <ul id="nav">
+                <li><a href="#home">home</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#projects">projects</a></li>
+            </ul>
+        </header>
+
         <h1>
             about
         </h1>
@@ -48,7 +57,16 @@
     </section>
 
     <section id="projects">
-        <h1>
+
+        <header>
+            <ul id="nav">
+                <li><a href="#home">home</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#projects">projects</a></li>
+            </ul>
+        </header>
+        
+        <h1 class="projects">
             projects
         </h1>
 
