--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             hi, nice to meet you!
         </h1>
 
-
         <h3>
             my name is Eunice Koo, and I'm a 2nd year student at Northeastern University studying 
             computer science and biology. I am currently looking for co-ops/internships for Summer/Fall 2023!
@@ -127,7 +126,7 @@
 
         <div class="floodit">   
 
-            <img class="floodit" src="images/floodit.png" alt="Image Processor Image">
+            <img class="floodit" src="images/floodit.png" alt="FloodIt Image">
 
             <h3 class="floodit">
                 FloodIt Game
@@ -141,6 +140,21 @@
                 and has a timer to keep track of game time.
             </p>
 
+        </div>
+
+        <div class="website">   
+
+            <h3 class="website">
+                Personal Website
+            </h3>
+
+            <p class="website">
+                This one page website was made with HTML and CSS and launched as a GitHub page. It features a nav bar 
+                that takes you to the different sections of the website, and changes display based on 
+                the size of your screen.
+            </p>
+
+            <img class="website" src="images/website.png" alt="Website Image">
         </div>
 
         <h3 class="des">
