--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <p class="floodit">
                 This flood it game was made for Northeastern's Fundamentals of Computer Science 2 course. Java, Java testing, and Java Random were utilized.
                 The aim of the game is to get the entire board to be in one color in the given amount of moves possible.
-                When a color is clicked, the board features a waterfall effect to fill the baord with the clicked color
+                When a color is clicked, the board features a waterfall effect to fill the board with the clicked color
                 if all the surrounding colors are the same. The game generates a random board everytime, keeps score,
                 and has a timer to keep track of game time.
             </p>
