--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
         </h1>
 
         <h3 class="about">
-            My interests lie in genetics research, 
-            medical software, and biotechnology, and I hope to pursue a career in building 
-            software to facilitate the innovation of medicine, healthcare, and biological research.
+            My interests lie in computational biology, bioinformatics, and software and algorithm 
+            development, and I hope to pursue a career in using technology to facilitate the innovation of science.
             I have primarily worked in Java throughout my courses at Northeastern, but also have 
             experience working with SQL, Python, and HTML/CSS/Javascript either in addtional courses
             or individual endeavors. In my free time, I love playing music, solving puzzles, 
