--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         </h1>
 
         <h3>
-            my name is Eunice Koo, and I'm a 2nd year student at Northeastern University studying 
-            computer science and biology. I am currently looking for co-ops/internships for Summer/Fall 2023!
+            my name is Eunice Koo, and I'm a 3rd year student at Northeastern University studying 
+            computer science and biology. I am currently completing my six-month co-op at the BioMicro Center, a core facility
+            under the Koch Institute for Integrative Cancer Research at MIT. I am currently looking for co-ops/internships for Summer 2024!
         </h3>
 
     </section>
@@ -40,7 +41,7 @@
             My interests lie in computational biology, bioinformatics, and software and algorithm 
             development, and I hope to pursue a career in using technology to facilitate the innovation of science.
             I have primarily worked in Java throughout my courses at Northeastern, but also have 
-            experience working with SQL, Python, and HTML/CSS/Javascript either in addtional courses
+            experience working with SQL, Python, and HTML/CSS/Javascript either in additional courses
             or individual endeavors. In my free time, I love playing music, solving puzzles, 
             going on runs, and spending time with family and friends. 
         </h3>
