--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <h3>
             my name is Eunice Koo, and I'm a 3rd year student at Northeastern University studying 
             computer science and biology. I am currently completing my six-month co-op at the BioMicro Center, a core facility
-            under the Koch Institute for Integrative Cancer Research at MIT. I am currently looking for co-ops/internships for Summer 2024!
+            under the Koch Institute for Integrative Cancer Research at MIT. I am currently looking for co-ops/internships for 
+            Summer 2024!
         </h3>
 
     </section>
