--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
         </h1>
 
         <h3>
-            my name is Eunice Koo, and I'm a 3rd year student at Northeastern University studying 
-            computer science and biology. I am currently completing my six-month co-op at the BioMicro Center, a core facility
-            under the Koch Institute for Integrative Cancer Research at MIT. I am currently looking for co-ops/internships for 
-            Summer 2024!
+            my name is Eunice Koo, I am currently a third-year student at Northeastern University, located in Boston, MA.
         </h3>
 
     </section>
@@ -35,16 +32,27 @@
     <section id="about">
 
         <h1 class="about">
-            about:
+            about me:
         </h1>
 
         <h3 class="about">
-            My interests lie in computational biology, bioinformatics, and software and algorithm 
-            development, and I hope to pursue a career in using technology to facilitate the innovation of science.
-            I have primarily worked in Java throughout my courses at Northeastern, but also have 
-            experience working with SQL, Python, and HTML/CSS/Javascript either in additional courses
-            or individual endeavors. In my free time, I love playing music, solving puzzles, 
-            going on runs, and spending time with family and friends. 
+            I am currently studying computer science & biology at Northeastern University and just wrapped up a 6-month
+            co-op experience on the bioinformatics team at the BioMicro Center, a core facility under the Koch 
+            Institute For Integrative Cancer Research at MIT, where I was exposed to what bioinformatics looks like in a 
+            major research setting. I am currently looking for co-ops/internships for Summer/Fall 2024, and hope to gain more 
+            insight into the world of bioinformatics and computational biology.
+            
+            I've always been intrigued by how the human body is wired and am particularly interested in genetics, proteomics, translational
+            sciences, and immunology. I also love solving puzzles, and the problem-solving aspect of computer science is what drew me to pursue
+            it in college. I want to pursue a career that will allow me to utilize my love for solving puzzles in a biological setting, and
+            allow me to contribute to larger projects to further the innovation of science.
+
+            Outside of classes, I love playing music in various performing arts organizations on campus, including Wind Ensemble,
+            Pep Band, and NU Stage, the musical theater company on campus. When I'm not playing music, I love going on bike
+            rides across Boston, reading memoirs, learning how to play the guitar, and taking pictures of the things I love.
+
+            Feel free to reach out to me at koo.e@northeastern.edu!
+
         </h3>
     </section>
 
@@ -159,9 +167,8 @@
         </div>
 
         <h3 class="des">
-            Check out more python scripts, coding challenges, and code to some of the above projects <a href="https://github.com/euniceseo" target="_blank">here!</a>
-            Code for school projects are 
-            available upon request.
+            You can find more python scripts, random coding challenges, and code to the above mentioned projects <a href="https://github.com/euniceseo" target="_blank">here!</a>
+            Code for school projects are available upon request due to Northeastern's policies.
         </h3>
 
     </section>
