--- a/index.html
+++ b/index.html
@@ -41,19 +41,23 @@
             Institute For Integrative Cancer Research at MIT, where I was exposed to what bioinformatics looks like in a 
             major research setting. I am currently looking for co-ops/internships for Summer/Fall 2024, and hope to gain more 
             insight into the world of bioinformatics and computational biology.
-            
+
+        </h3>
+        <h3 class="about">
             I've always been intrigued by how the human body is wired and am particularly interested in genetics, proteomics, translational
             sciences, and immunology. I also love solving puzzles, and the problem-solving aspect of computer science is what drew me to pursue
             it in college. I want to pursue a career that will allow me to utilize my love for solving puzzles in a biological setting, and
             allow me to contribute to larger projects to further the innovation of science.
-
+        </h3>
+        <h3 class="about">
             Outside of classes, I love playing music in various performing arts organizations on campus, including Wind Ensemble,
             Pep Band, and NU Stage, the musical theater company on campus. When I'm not playing music, I love going on bike
             rides across Boston, reading memoirs, learning how to play the guitar, and taking pictures of the things I love.
-
-            Feel free to reach out to me at koo.e@northeastern.edu!
-
         </h3>
+        <h3 class="about">
+            Feel free to reach out to me at koo.e@northeastern.edu!
+        </h3>
+        
     </section>
 
     <section id="projects">
