--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
             allow me to contribute to larger projects to further the innovation of science.
         </h3>
         <h3 class="about">
-            Outside of classes, I love playing music in various performing arts organizations on campus, including Wind Ensemble,
-            Pep Band, and NU Stage, the musical theater company on campus. When I'm not playing music, I love going on bike
-            rides across Boston, reading memoirs, learning how to play the guitar, and taking pictures of the things I love.
+            Outside of classes, I love playing music in various performing arts organizations on campus, going on bike
+            rides across Boston, reading memoirs, learning how to play the guitar, and taking pictures of the things I love. 
         </h3>
         <h3 class="about">
             Feel free to reach out to me at koo.e@northeastern.edu!
