--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </h1>
 
         <h3>
-            my name is Eunice Koo, I am currently a third-year student at Northeastern University, located in Boston, MA.
+            my name is Eunice Koo, I am currently a third-year student at Northeastern University, studying computer science and biology.
         </h3>
 
     </section>
