--- a/index.html
+++ b/index.html
@@ -169,6 +169,21 @@
             <img class="website" src="images/website.png" alt="Website Image">
         </div>
 
+        <div class="figure-gen">   
+
+            <img class="figure-gen" src="images/figure-gen.png" alt="Figure Generation Image">
+
+            <h3 class="figure-gen">
+                Figure Generation 
+            </h3>
+
+            <p class="figure-gen">
+                This figure generation code takes in a single JSON database list and turns it into these two figures, separated by 
+                experiment type, lab, type of sample, and more.
+            </p>
+
+        </div>
+
         <h3 class="des">
             You can find more python scripts, random coding challenges, and code to the above mentioned projects <a href="https://github.com/euniceseo" target="_blank">here!</a>
             Code for school projects are available upon request due to Northeastern's policies.
