--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </h1>
 
         <h3>
-            my name is Eunice Koo, I am currently a third-year student at Northeastern University, studying computer science and biology.
+            my name is Eunice Koo, I am currently a third-year student studying computer science and biology.
         </h3>
 
     </section>
@@ -36,22 +36,22 @@
         </h1>
 
         <h3 class="about">
-            I am currently studying computer science & biology at Northeastern University and just wrapped up a 6-month
+            I am currently a student at Northeastern University, located in Bosotn, MA. I just wrapped up a 6-month
             co-op experience on the bioinformatics team at the BioMicro Center, a core facility under the Koch 
             Institute For Integrative Cancer Research at MIT, where I was exposed to what bioinformatics looks like in a 
-            major research setting. I am currently looking for co-ops/internships for Summer/Fall 2024, and hope to gain more 
-            insight into the world of bioinformatics and computational biology.
+            major research setting. I'm currently working, assisting with computational proteomics research at the Slavov Lab, 
+            and will be working as a Computational co-op at Parallel Squared Technology Institutute starting July.
 
         </h3>
         <h3 class="about">
             I've always been intrigued by how the human body is wired and am particularly interested in genetics, proteomics, translational
             sciences, and immunology. I also love solving puzzles, and the problem-solving aspect of computer science is what drew me to pursue
-            it in college. I want to pursue a career that will allow me to utilize my love for solving puzzles in a biological setting, and
-            allow me to contribute to larger projects to further the innovation of science.
+            it further. I want to pursue a career that will allow me to utilize my love for solving puzzles in a biological setting, and
+            allow me to contribute to larger projects to further the innovation of science. 
         </h3>
         <h3 class="about">
-            Outside of classes, I love playing music in various performing arts organizations on campus, going on bike
-            rides across Boston, reading memoirs, learning how to play the guitar, and taking pictures of the things I love. 
+            When I'm not coding or reading scientific papers, I love playing clarinet in various performing arts organizations on campus, 
+            going on bike rides across Boston, reading memoirs, chasing sunsets, and taking pictures of the things I love. 
         </h3>
         <h3 class="about">
             Feel free to reach out to me at koo.e@northeastern.edu!
@@ -75,11 +75,9 @@
 
             <p class="marble">
                 This marble solitaire game was made for Northeastern's Object Oriented Design course. Java and JUnit testing were utilized.
-                It features three possible game modes, and when a player
-                starts the game they are presented with an initial board in which they can enter
-                to and from coordinates to make moves and play the game from the command line. Invalid moves
-                and scores are notified to the user. The game is over
-                when there are no more possible moves left, and the objective of the game is to
+                It features three possible game modes playable from the command line with a multitude of options. Invalid moves
+                and scores are notified to the user, and the game is over
+                when there are no more possible moves left. The objective of the game is to
                 clear as many marbles as possible.
             </p>
         </div>
@@ -152,21 +150,6 @@
                 and has a timer to keep track of game time.
             </p>
 
-        </div>
-
-        <div class="website">   
-
-            <h3 class="website">
-                Personal Website
-            </h3>
-
-            <p class="website">
-                This one page website was made with HTML and CSS and launched as a GitHub page. It features a nav bar 
-                that takes you to the different sections of the website, and changes display based on 
-                the size of your screen.
-            </p>
-
-            <img class="website" src="images/website.png" alt="Website Image">
         </div>
 
         <div class="figure-gen">   
