--- a/index.html
+++ b/index.html
@@ -36,22 +36,24 @@
         </h1>
 
         <h3 class="about">
-            I am currently a student at Northeastern University, located in Bosotn, MA. I just wrapped up a 6-month
+            I am currently a student at Northeastern University, located in Boston, MA. I just wrapped up a 6-month
             co-op experience on the bioinformatics team at the BioMicro Center, a core facility under the Koch 
             Institute For Integrative Cancer Research at MIT, where I was exposed to what bioinformatics looks like in a 
-            major research setting. I'm currently working, assisting with computational proteomics research at the Slavov Lab, 
-            and will be working as a Computational co-op at Parallel Squared Technology Institutute starting July.
+            major research setting. I'm currently assisting with computational proteomics research at the Slavov Lab, where I've
+            been learning how to perform basic Python proteomics analysis and get involved with running searches on big scale proteomics 
+            data. Starting July, I will be joining Parallel Squared Technology Institute as a Computational co-op.
 
         </h3>
         <h3 class="about">
             I've always been intrigued by how the human body is wired and am particularly interested in genetics, proteomics, translational
-            sciences, and immunology. I also love solving puzzles, and the problem-solving aspect of computer science is what drew me to pursue
-            it further. I want to pursue a career that will allow me to utilize my love for solving puzzles in a biological setting, and
+            sciences, and immunology. I love solving puzzles, which is what initially drove me to pursuing computer science.
+            I want to pursue a career that will allow me to utilize my love for solving puzzles in a biological setting, and
             allow me to contribute to larger projects to further the innovation of science. 
         </h3>
         <h3 class="about">
-            When I'm not coding or reading scientific papers, I love playing clarinet in various performing arts organizations on campus, 
-            going on bike rides across Boston, reading memoirs, chasing sunsets, and taking pictures of the things I love. 
+            When I'm not coding or reading scientific papers, going on bike rides across Boston, reading memoirs, chasing sunsets, and taking 
+            pictures of the things I love. I'm also heavily involved in various music ensembles at Northeastern, where you can catch me playing
+            clarinet with the pep band, wind ensemble, NU Stage, the musical theater group on campus, or just jamming out with friends.
         </h3>
         <h3 class="about">
             Feel free to reach out to me at koo.e@northeastern.edu!
