--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </h3>
 
             <p class="marble">
-                This marble solitaire game was made for Northeastern's Object Oriented Design course. Java and JUnit testing were utilized.
+                This Marble Solitaire game was made for Northeastern's Object Oriented Design course. Java and JUnit testing were utilized.
                 It features three possible game modes playable from the command line with a multitude of options. Invalid moves
                 and scores are notified to the user, and the game is over
                 when there are no more possible moves left. The objective of the game is to
@@ -86,7 +86,7 @@
 
         <div class="imageprocessor">
             <p class="imageprocessor">
-                This image processing software was made for Northeastern's Object Oriented Design course. Java, JUnit testing, and Java Swing were utilized.
+                This Image Processing software was made for Northeastern's Object Oriented Design course. Java, JUnit testing, and Java Swing were utilized.
                 The software features 7+ image transformations users can perform on an image alongside loading and saving
                 an image from their desktop. After each transformation, the transformed image alongside a histogram of
                 the red, green, blue, and average values are shown.
@@ -108,7 +108,7 @@
             </h3>
 
             <p class="hospital">
-                This hospital database management software was made for Northeastern's Database Design course. 
+                This Hospital Database Management Software was made for Northeastern's Database Design course. 
                 SQL was used to create and manipulate the databases, and routes were written in Python.
                 Alongside those languages, the software was made with the use of Flask, Docker, AppSmith,
                 and ngrok.
@@ -126,7 +126,7 @@
             </h3>
 
             <p class="messageboard">
-                This message board I made with the use of Flask in python and the pythonanywhere platform:
+                This Message Board I made with the use of Flask in Python and the Pythonanywhere platform:
                 the framework was written with HTML, CSS, and JavaScript, while the route was written in Python.
                 It features a form where you can post discussion comments and messages, and the form restricts
                 you from posting an empty comment, a comment longer than 128 characters, or a comment that
@@ -145,7 +145,7 @@
             </h3>
 
             <p class="floodit">
-                This flood it game was made for Northeastern's Fundamentals of Computer Science 2 course. Java, Java testing, and Java Random were utilized.
+                This FloodIt game was made for Northeastern's Fundamentals of Computer Science 2 course. Java, Java testing, and Java Random were utilized.
                 The aim of the game is to get the entire board to be in one color in the given amount of moves possible.
                 When a color is clicked, the board features a waterfall effect to fill the board with the clicked color
                 if all the surrounding colors are the same. The game generates a random board everytime, keeps score,
@@ -161,7 +161,7 @@
             </h3>
 
             <p class="figure-gen">
-                This figure generation code takes in a single JSON database list and turns it into these two figures, separated by 
+                This Figure Generation code takes in a single JSON database list and turns it into these two figures, separated by 
                 experiment type, lab, type of sample, and more.
             </p>
 
@@ -170,7 +170,7 @@
         </div>
 
         <h3 class="des">
-            You can find more python scripts, random coding challenges, and code to the above mentioned projects <a href="https://github.com/euniceseo" target="_blank">here!</a>
+            You can find more Python scripts, random coding challenges, and code to the above mentioned projects <a href="https://github.com/euniceseo" target="_blank">here!</a>
             Code for school projects are available upon request due to Northeastern's policies.
         </h3>
 
