--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             allow me to contribute to larger projects to further the innovation of science. 
         </h3>
         <h3 class="about">
-            When I'm not coding or reading scientific papers, going on bike rides across Boston, reading memoirs, chasing sunsets, and taking 
+            When I'm not coding or reading scientific papers, I love going on bike rides across Boston, reading memoirs, chasing sunsets, and taking 
             pictures of the things I love. I'm also heavily involved in various music ensembles at Northeastern, where you can catch me playing
             clarinet with the pep band, wind ensemble, NU Stage, the musical theater group on campus, or just jamming out with friends.
         </h3>
